Endpoints_Connections GET,PATCH and Delete. Tests for Updates all Passing as of this Commut
